--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "mongodb": "3.5.9",
-    "mongoose": "5.9.19"
+    "mongoose": "5.9.19",
+    "uuidv4": "6.1.0"
   },
   "devDependencies": {
     "nodemon": "2.0.4"
@@ -20,7 +21,8 @@
   },
   "nodemonConfig": {
     "ignore": [
-      "client/"
+      "client/",
+      "*.json"
     ]
   },
   "engines": {
